--- a/app/views/layout.latte
+++ b/app/views/layout.latte
@@ -15,9 +15,9 @@
 <main>
     {block content}{/block}
 </main>
-<footer>
-    <p>&copy; {date('Y')} Flight Blog</p>
-</footer>
+
+{include 'footer.latte'}
+
 </body>
 </html>
 
