Add head template file

--- a/app/views/layout.latte
+++ b/app/views/layout.latte
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>{$siteTitle}</title>
-</head>
+  {include 'head.latte'}
 <body>
 <header>
     <h1>{$siteTitle}</h1>
