--- a/app/views/head.latte
+++ b/app/views/head.latte
@@ -18,10 +18,10 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link rel="preconnect" href="https://github.com" />
-  <link href="/src/styles.css" rel="stylesheet" />
+  <link href="/assets/styles.css" rel="stylesheet" />
   <link
     href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap"
     rel="stylesheet"
   />
-  <link rel="icon" href="src/images/favicon-16x16.png" />
+  <link rel="icon" href="assets/images/favicon-16x16.png" />
 </head>
