Add link to home page

--- a/app/views/layout.latte
+++ b/app/views/layout.latte
@@ -12,7 +12,12 @@
       <div>
         <div>
           <h1>
-            {$siteOwner}'s website
+            <a
+              href="/"
+              aria-label="Home"
+            >
+              {$siteOwner}'s website
+            </a>
           </h1>
           <p>
             {$siteTitle}
