Simplify site_heading

--- a/app/views/layout.latte
+++ b/app/views/layout.latte
@@ -16,7 +16,7 @@
             href="/"
             aria-label="Home"
           >
-            {$siteOwner}'s website
+            {$siteOwner}
           </a>
         </h1>
         <p class="site_title">
