--- a/public/assets/styles.css
+++ b/public/assets/styles.css
@@ -79,12 +79,21 @@ body {
 
 .contact_form button {
     margin-bottom: 0.8rem;
-    padding: 0.4rem;
+    padding: 0.8rem 1rem;
     width: 100%;
     cursor: pointer;
-    background-color:#a7ff50;
-    border: 2px solid #a7ff50;
+    background-color:#b1ff63;
+    border: 2px solid #b1ff63;
     border-radius: 2px;
+    border: 2px solid #75ad3d;
+    transition: 0.3s all ease;
+}
+
+.contact_form button:hover,
+.header_links .contact_link:hover,
+.header_links .github_link:hover,
+.project_links a:hover {
+    background-color: chartreuse;
 }
 
 header,
@@ -139,26 +148,33 @@ footer {
 }
 
 .header_links .contact_link {
-    background-color: #a7ff50;
-    padding: 1rem;
-    border-radius: 4px;
-    text-decoration: none;
-    color: #272727;}
-
-.header_links .github_link {
-    background-color: #a7ff50;
-    padding: 1rem;
+    background-color: #b1ff63;
+    padding: 0.8rem 1rem;
     border-radius: 4px;
     text-decoration: none;
     color: #272727;
+    border: 2px solid #75ad3d;
+    transition: 0.3s all ease;
+}
+
+.header_links .github_link {
+    background-color: #b1ff63;
+    padding: 0.8rem 1rem;
+    border-radius: 4px;
+    text-decoration: none;
+    color: #272727;
+    border: 2px solid #75ad3d;
+    transition: 0.3s all ease;
 }
 
 .project_links a {
-    background-color:#a7ff50;
-    padding: 1rem;
+    background-color:#b1ff63;
+    padding: 0.8rem 1rem;
     border-radius: 4px;
     text-decoration: none;
     color: #272727;
+    border: 2px solid #75ad3d;
+    transition: 0.3s all ease;
 }
 
 h1,
