Slugify css classes for badges

--- a/app/views/home.latte
+++ b/app/views/home.latte
@@ -41,7 +41,7 @@
           <p>{$description}</p>
           <div>
             {foreach $technologies as $technology}
-              <span class="badge-{strtolower($technology)}">{$technology}</span>
+              <span class="badge {strtolower(str_replace([' ', '.'], '-', $technology))}">{$technology}</span>
             {/foreach}
           </div>
           <div class="project_links">
