--- a/public/assets/styles.css
+++ b/public/assets/styles.css
@@ -27,11 +27,15 @@ body {
     display: flex;
     flex-flow: wrap;
     width: 100%;
+    justify-content: space-between;
 }
 
 .project {
     padding: 1rem;
     width: 100%;
+    margin-bottom: 1rem;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+    border-radius: 4px;
 }
 
 .project_image {
