--- a/public/assets/styles.css
+++ b/public/assets/styles.css
@@ -12,7 +12,7 @@ body {
 
 .flash {
     padding: 1rem;
-    margin: 1rem 0;
+    margin: 1rem 0 0.5rem;
 }
 
 .success {
@@ -135,7 +135,7 @@ footer {
 .header_links,
 .contact_form {
     padding: 0.4rem 1rem;
-    margin: 0.4rem;
+    margin: 0.4rem 0.4rem 1rem;
 }
 
 .header_links a,
