Replace mailto link with a link to the contact page

--- a/app/views/footer.latte
+++ b/app/views/footer.latte
@@ -8,8 +8,8 @@
     <div>
       <div class="footer_links">
         <a
-          href="mailto:oljo@protonmail.ch"
-          aria-label="Send email to Olof Johansson"
+          href="/contact"
+          aria-label="Contact"
         >
           <img
             src="assets/images/email-8-svgrepo-com.svg"
