--- a/app/views/layout.latte
+++ b/app/views/layout.latte
@@ -9,43 +9,7 @@
       Skip to main content
     </a>
 
-    <header role="banner" class="site_header">
-      <div>
-        <h1 class="site_heading">
-          <a
-            href="/"
-            aria-label="Home"
-          >
-            {$siteOwner}
-          </a>
-        </h1>
-        <p class="site_title">
-          {$siteTitle}
-        </p>
-        <div class="header_links">
-          <a
-            href="/contact"
-            aria-label="Contact {$siteOwner}"
-            class="contact_link"
-          >
-            Contact
-          </a>
-          <a
-            href="{$github}"
-            aria-label="Visit {$siteOwner}'s GitHub profile"
-            rel="noopener noreferrer"
-            target="_blank"
-            class="github_link"
-          >
-            GitHub Profile
-          </a>
-        </div>
-      </div>
-
-      {if $flash}
-        <p class="flash {$flash['type']}">{$flash['message']}</p>
-      {/if}
-    </header>
+    {include 'header.latte'}
 
     <main id="main-content" role="main">
         {block content}{/block}
