--- a/public/assets/styles.css
+++ b/public/assets/styles.css
@@ -151,6 +151,11 @@ footer {
     margin-right: 1em;
 }
 
+.project_links a {
+    width: 48%;
+    text-align: center;
+}
+
 .site_heading,
 .site_title {
     text-align: center;
@@ -182,7 +187,7 @@ footer {
 }
 
 .project_links a {
-    padding: 0.8rem 1rem;
+    padding: 0.5rem 1rem;
     border-radius: 4px;
     text-decoration: none;
     color: var(--text-color);
