--- a/public/assets/styles.css
+++ b/public/assets/styles.css
@@ -1,324 +1,5 @@
-:root {
-  --text-color: var(--text-color);
-  --accent: #b1ff63;
-  --accent-dark: #75ad3d;
-  --accent-bright: chartreuse;
-  --box-shadow-button: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-}
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-body {
-    font-family: "Inter", system-ui, -apple-system, sans-serif;
-    line-height: 28px;
-    color: var(--text-color);
-}
-
-.flash {
-    padding: 1rem;
-    margin: 1rem 0 0.5rem;
-}
-
-.success {
-    background-color: lightgreen;
-}
-
-.error {
-    background-color: lightcoral;
-}
-
-.projects {
-    display: flex;
-    flex-flow: wrap;
-    width: 100%;
-    justify-content: space-between;
-}
-
-.project {
-    padding: 1rem;
-    width: 100%;
-    margin-bottom: 1rem;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
-    border-radius: 4px;
-}
-
-.project_image {
-    width: 100%;
-    height: 18rem;
-    object-fit: cover;
-    border-radius: 4px;
-}
-
-.icon {
-    width: 2rem;
-    height: auto;
-}
-
-.skip_link {
-    display: none;
-}
-
-.footer_links {
-    display: flex;
-    justify-content: center;
-}
-
-.footer_links a {
-    margin-right: 1rem;
-}
-
-.copyright {
-    text-align: center;
-    padding: 1rem;
-}
-
-.project_links,
-.header_links {
-    display: flex;
-    justify-content: center;
-}
-
-.contact_form input,
-.contact_form textarea {
-    margin-bottom: 0.8rem;
-    padding: 0.4rem;
-    width: 100%;
-}
-
-.contact_form button {
-    margin-bottom: 0.8rem;
-    padding: 0.8rem 1rem;
-    width: 100%;
-    cursor: pointer;
-    background-color: var(--accent);
-    border: 2px solid var(--accent);
-    border-radius: 2px;
-    border: 2px solid var(--accent-dark);
-    transition: 0.3s all ease;
-    box-shadow: var(--box-shadow-button);
-}
-
-.contact_form button:hover,
-.header_links .contact_link:hover,
-.header_links .github_link:hover,
-.project_links a:hover {
-    background-color: var(--accent-bright);
-}
-
-header,
-main,
-footer {
-    max-width: 1024px;
-    padding: 0 1rem 1rem 1rem;
-    margin: 0 auto;
-}
-
-.site_header {
-    padding: 2.4rem 2.4rem 1rem;
-}
-
-.sub_header {
-    padding: 1rem 1rem 1.4rem;
-}
-
-.sub_header h2,
-.sub_header p {
-    text-align: center;
-}
-
-footer {
-    padding: 2.4rem;
-}
-
-.site_title {
-    font-size: 1.2rem;
-}
-
-.site_heading,
-.site_title,
-.header_links,
-.contact_form {
-    padding: 0.4rem 1rem;
-    margin: 0.4rem 0.4rem 1rem;
-}
-
-.header_links a,
-.project_links a {
-    margin-right: 1em;
-}
-
-.project_links a {
-    width: 48%;
-    text-align: center;
-}
-
-.site_heading,
-.site_title {
-    text-align: center;
-}
-
-.project_links {
-    margin: 1rem 0;
-}
-
-.header_links .contact_link {
-    background-color: var(--accent);
-    padding: 0.8rem 1rem;
-    border-radius: 4px;
-    text-decoration: none;
-    color: var(--text-color);
-    border: 2px solid var(--accent-dark);
-    transition: 0.3s all ease;
-    box-shadow: var(--box-shadow-button);
-}
-
-.header_links .github_link {
-    padding: 0.8rem 1rem;
-    border-radius: 4px;
-    text-decoration: none;
-    color: var(--text-color);
-    border: 2px solid var(--accent-dark);
-    transition: 0.3s all ease;
-    box-shadow: var(--box-shadow-button);
-}
-
-.project_links a {
-    padding: 0.5rem 1rem;
-    border-radius: 4px;
-    text-decoration: none;
-    color: var(--text-color);
-    border: 2px solid var(--accent-dark);
-    transition: 0.3s all ease;
-    box-shadow: var(--box-shadow-button);
-}
-
-h1,
-h2,
-h3,
-.project_image {
-    margin-bottom: 1rem;
-}
-
-h1,
-h2,
-h3 {
-    line-height: normal;
-}
-
-a {
-    color: #3b7700;
-}
-
-.badges {
-    display: flex;
-    flex-flow: wrap;
-    margin: 0.8rem 0;
-}
-
-.badge {
-    font-size: 0.9em;
-    padding: 0.3rem 0.8rem;
-    margin-bottom: 0.4rem;
-    border-radius: 20px;
-    margin-right: 0.2rem;
-}
-
-.leaflet-js {
-    background-color: #4fff38;
-    color: #23661b;
-    border: 1px solid #23661b;
-}
-
-.typescript {
-    background-color: #ffff38;
-    color: #4e4e00;
-    border: 1px solid #6d6d00;
-}
-
-.react {
-    background-color: #38d1ff;
-    color: #103a47;
-    border: 1px solid #154f61;
-}
-
-.sass {
-    background-color: #ff38cd;
-    color: #581447;
-    border: 1px solid #581447;
-}
-
-.php {
-    background-color: #9a16b4;
-    color: #fbe7ff;
-    border: 1px solid #fbe7ff;
-}
-
-.wordpress {
-    background-color: #1b4ceb;
-    color: #f3f3f3;
-    border: 1px solid #f3f3f3;
-}
-
-.mysql {
-    background-color: #102d8d;
-    color: #f2f5ff;
-    border: 1px solid #f2f5ff;
-}
-
-.sqlite {
-    background-color: #102d8d;
-    color: #f2f5ff;
-    border: 1px solid #f2f5ff;
-}
-
-.laravel {
-    background-color: #c90000;
-    color: #ffe4e4;
-    border: 1px solid #ffe4e4;
-}
-
-.rest-api {
-    background-color: #c4c4c4;
-    color: #4d4d4d;
-    border: 1px solid #5c5c5c;
-}
-
-.huggingface-api {
-    background-color: #ffc400;
-    color: #413100;
-    border: 1px solid #413100;
-}
-
-.tailwind-css {
-    background-color: #00ffc8;
-    color: #004637;
-    border: 1px solid #004637;
-}
-
-.picnic-css {
-    background-color: #006eff;
-    color: #f2f5ff;
-    border: 1px solid #f2f5ff;
-}
-
-.symfony {
-    background-color: #141414;
-    color: #c9c9c9;
-    border: 1px solid #c9c9c9;
-}
-
-.sage {
-    background-color: #7500a3;
-    color: #f3f3f3;
-    border: 1px solid #f3f3f3;
-}
-
-@media screen and (width >=750px) {
-    .project {
-        width: 49%;
-    }
-}
+@import url("main.css");
+@import url("projects.css");
+@import url("badges.css");
+@import url("contact.css");
+@import url("responsive.css");
