--- a/public/assets/main.css
+++ b/public/assets/main.css
@@ -98,15 +98,9 @@ footer {
 
 .header_links .contact_link {
     background-color: var(--accent);
-    padding: 0.8rem 1rem;
-    border-radius: 4px;
-    text-decoration: none;
-    color: var(--text-color);
-    border: 2px solid var(--accent-dark);
-    transition: 0.3s all ease;
-    box-shadow: var(--box-shadow-button);
 }
 
+.header_links .contact_link,
 .header_links .github_link {
     padding: 0.8rem 1rem;
     border-radius: 4px;
