Move links to home view

--- a/app/views/home.latte
+++ b/app/views/home.latte
@@ -2,6 +2,25 @@
 
 {block content}
 
+<div class="header_links">
+  <a
+    href="/contact"
+    aria-label="Contact {$siteOwner}"
+    class="contact_link"
+  >
+    Contact
+  </a>
+  <a
+    href="{$github}"
+    aria-label="Visit {$siteOwner}'s GitHub profile"
+    rel="noopener noreferrer"
+    target="_blank"
+    class="github_link"
+  >
+    GitHub Profile
+  </a>
+</div>
+
 <section
   aria-labelledby="projects-heading"
 >
