Add heading for contact form

--- a/app/views/contact.latte
+++ b/app/views/contact.latte
@@ -2,6 +2,8 @@
 
 {block content}
 
+<h1 class="site_heading">Contact</h1>
+
 <form method="POST" action="/contact-send" class="contact_form">
   <label for="name">Name</label>
   <input type="text" id="name" name="name" maxlength="50" required />
