--- a/app/views/head.latte
+++ b/app/views/head.latte
@@ -14,7 +14,7 @@
   <meta property="og:description" content="{$siteOwner}'s website" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="{$siteUrl}" />
-  <title>{$siteTitle}</title>
+  <title>{$siteTitle} | {$pageTitle}</title>
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link rel="preconnect" href="https://github.com" />
