Add link to SearXNG

--- a/app/views/footer.latte
+++ b/app/views/footer.latte
@@ -6,6 +6,17 @@
 >
   <div>
     <div>
+      <p class="searxng_link">
+        Search the web without being tracked with 
+        <a
+          href="https://search.oljo.xyz/"
+          aria-label="Search with SearXNG"
+          rel="noopener noreferrer"
+          target="_blank"
+        >
+          SearXNG.
+        </a>
+      </p>
       <div class="footer_links">
         <a
           href="/contact"
